fix css with lesson

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
     <main>
-        <!--================== section hero ===================-->
+        <!--================== hero ===================-->
         <section class="section hero">
             <div class="container">
                 <ul>
@@ -55,7 +55,7 @@
                 <p class="description-hero-two">Мы эксперты в модных мужских стрижках.<br>Работаем быстро, осторожно и со вкусом.</p>
             </div>
         </section>
-        <!--================== section about us==================== -->
+        <!--================== about us==================== -->
         <section class="section section-about" id="about">
             <div class="container">
                 <ul class="menu-about">
@@ -82,7 +82,7 @@
                 </div>
             </div>           
         </section>
-        <!-- ==================section price =======================-->
+        <!-- ================== price =======================-->
         <section class="section section-prices" id="prices">
             <div class="container">
                 <p class="over-title-prices">Проведи время в компании лучших мастеров</p>
@@ -128,7 +128,7 @@
                 <button class="btn-prices" type="button">онлайн-запись</button>
             </div>
         </section>
-        <!-- ==================section why come to us =================-->
+        <!-- ================== why come to us =================-->
         <section class="section">
             <div class="container container-why">
                 <ul class="menu-why">
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </section>
-        <!--================= section our masters ====================-->
+        <!--================= our masters ====================-->
         <section class="section section-masters" id="masters">
             <div class="container">
                 <p class="text-masters">для настоящих ценителей атмосферы</p>
@@ -170,89 +170,95 @@
                 <ul class="menu-masters">
                     <li class="item-masters">
                         <img src="./images/master1.jpg" alt="Барбер стрижет" width="370" height="346">
-                        <h3 class="subtitle-masters" lang="en">John Smith</h3>
-                        <p class="position-masters" lang="en">Extreme Barber</p>
-                        <ul class="list-socialnet">
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/instagram-icon.svg" alt="Instagram">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/twitter-icon.svg" alt="Twitter">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/facebook-icon.svg" alt="Facebook">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/linkedin-icon.svg" alt="LinkedIn">
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="content-masters">
+                            <h3 class="subtitle-masters" lang="en">John Smith</h3>
+                            <p class="position-masters" lang="en">Extreme Barber</p>
+                            <ul class="list-socialnet">
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/instagram-icon.svg" alt="Instagram">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/twitter-icon.svg" alt="Twitter">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/facebook-icon.svg" alt="Facebook">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/linkedin-icon.svg" alt="LinkedIn">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item-masters">
                         <img src="./images/master2.jpg" alt="Барбер стрижет" width="370" height="346">
-                        <h3 class="subtitle-masters" lang="en">Michele Doe</h3>
-                        <p class="position-masters" lang="en">Extreme Barber</p>
-                        <ul class="list-socialnet">
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/instagram-icon.svg" alt="Instagram">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/twitter-icon.svg" alt="Twitter">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/facebook-icon.svg" alt="Facebook">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/linkedin-icon.svg" alt="LinkedIn">
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="content-masters">
+                            <h3 class="subtitle-masters" lang="en">Michele Doe</h3>
+                            <p class="position-masters" lang="en">Extreme Barber</p>
+                            <ul class="list-socialnet">
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/instagram-icon.svg" alt="Instagram">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/twitter-icon.svg" alt="Twitter">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/facebook-icon.svg" alt="Facebook">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/linkedin-icon.svg" alt="LinkedIn">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="item-masters">
                         <img src="./images/master3.jpg" alt="Барбер стрижет" width="370" height="346">
-                        <h3 class="subtitle-masters" lang="en">Alan Black</h3>
-                        <p class="position-masters" lang="en">Extreme Barber</p>
-                        <ul class="list-socialnet">
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/instagram-icon.svg" alt="Instagram">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/twitter-icon.svg" alt="Twitter">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/facebook-icon.svg" alt="Facebook">
-                                </a>
-                            </li>
-                            <li class="item-socialnet">
-                                <a href="">
-                                    <img src="./images/linkedin-icon.svg" alt="LinkedIn">
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="content-masters">
+                            <h3 class="subtitle-masters" lang="en">Alan Black</h3>
+                            <p class="position-masters" lang="en">Extreme Barber</p>
+                            <ul class="list-socialnet">
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/instagram-icon.svg" alt="Instagram">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/twitter-icon.svg" alt="Twitter">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/facebook-icon.svg" alt="Facebook">
+                                    </a>
+                                </li>
+                                <li class="item-socialnet">
+                                    <a href="">
+                                        <img src="./images/linkedin-icon.svg" alt="LinkedIn">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>                      
                     </li>
                 </ul>
             </div>
         </section>
-        <!-- ================section what is barber====================-->
+        <!-- ================ what is barber====================-->
         <section class="section">
             <div class="container">
                 <p class="text-what">На латинском языке “барба” означает “борода”</p>
@@ -273,13 +279,13 @@
                 </ul>
             </div>
         </section>
-        <!-- --------------section online registration---------------- -->
+        <!-- -------------- online registration---------------- -->
         <section class="section">
             <div class="container">
                 <h2 class="title-reg">Онлайн-запись</h2>
             </div>
         </section>
-        <!-- =================section contacts ==========================-->
+        <!-- ================= contacts ==========================-->
         <section class="section" id="contacts">
             <div class="container">
                 <h2 class="title-contacts">Контакты</h2>
